--- a/client/home.html
+++ b/client/home.html
@@ -8,8 +8,8 @@
                             <p>SOFTWARE DEVELOPER</p>
                             <ul>
                                 <li><a href="https://github.com/felixobrien">GITHUB</a></li>
-                                <li><a href="https://github.com/felixobrien">YOUTUBE</a></li>
-                                <li><a href="https://github.com/felixobrien">DISCORD</a></li>
+                                <li><a href="https://www.youtube.com/channel/UCBB7j-5efSCxnoeGbC7Yq1g">YOUTUBE</a></li>
+                                <li><a href="https://discordapp.com/users/571850808782618636">DISCORD</a></li>
                             </ul>
                         </div>
                     </div>
